STR_XL/Training/slurm-7701.out
  File "/home/klg6z/work/work/TransformerXL/STR_XL/Training/StrXL_Training.py", line 86
    model = 
            ^
SyntaxError: invalid syntax
